Battle long overlap fix
Moved the battle log behind all full screen views.
Fixes issue #2760

--- a/src/style/styles.less
+++ b/src/style/styles.less
@@ -302,7 +302,7 @@
 	bottom: 0;
 	height: 0;
 	width: 100%;
-	z-index: 5;
+	z-index: 1;
 }
 
 #rightpanel {
